fix: add bg-image for facts section, add text-align

--- a/src/scss/components/_facts.scss
+++ b/src/scss/components/_facts.scss
@@ -1,7 +1,23 @@
 .facts {
+  position: relative;
+  overflow: hidden;
+  background-color: var(--light-color);
   padding: 80px 0;
   padding-top: 180px;
-  padding-bottom: 150px;
+  padding-bottom: 100px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    background-image: url('../img/facts-bg.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    left: -9px;
+    top: -195px;
+    width: 570px;
+    height: 1065px;
+  }
 
   &__list {
     max-width: 736px;
@@ -90,6 +106,8 @@
   }
 
   &__text {
+    display: block;
+    text-align: center;
     font-weight: 400;
     font-size: 14px;
     line-height: 150%;
